Progress Tracking added, fixes